# otd

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY_AUDIT.md  TODO.md  build.rs  clippy.toml  docker-compose.yml  input.css  otd-config.toml
.zed/: settings.json
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: api.ts  constants.ts  themes.ts  types.ts
frontend/src/lib/components/: Breadcrumbs.svelte  ConfirmDialog.svelte  FileRow.svelte  Footer.svelte  LinkRow.svelte  Modal.svelte  Navbar.svelte  StatCard.svelte  StatusBadge.svelte  ThemeSwatch.svelte  Toast.svelte
frontend/src/lib/stores/: auth.svelte.ts  theme.svelte.ts  toast.svelte.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/browse/: +page.svelte
frontend/src/routes/links/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/settings/: +page.svelte
media/: demo.webm
scripts/: build.sh  bundle.sh  creplace.sh  docker-build.sh  serve.sh  test-doc.sh
scripts/utils/: colors.sh
shared/: README.md  constants.json
src/: auth.rs  classes.rs  config.rs  download.rs  embed.rs  handlers.rs  health.rs  http.rs  lib.rs  main.rs  routes.rs  server.rs  types.rs
src/api/: error.rs  mod.rs
src/api/routes/: auth.rs  browse.rs  mod.rs  settings.rs  theme.rs
src/api/routes/links/: bulk_delete.rs  delete.rs  edit.rs  generate.rs  list.rs  mod.rs  revive.rs  stats.rs
src/archive/: file.rs  formats.rs  mod.rs  writers.rs
src/components/: confirm.rs  file_row.rs  link_row.rs  menu_icon.rs  mod.rs  modal.rs  toast.rs
src/core/: auth.rs  browse.rs  download.rs  health.rs  links.rs  mod.rs
src/core/archive/: file.rs  formats.rs  mod.rs  writers.rs
src/handlers/: browse.rs  download.rs  links.rs  mod.rs
src/pages/: about.rs  browse.rs  dashboard.rs  layout.rs  links.rs  login.rs  mod.rs  styles.rs
src/requests/: browse.rs  delete.rs  generate.rs  links.rs  mod.rs  persisted.rs  stats.rs
src/state/: mod.rs  persisted.rs
src/svg/: icons.rs  mod.rs  mode.rs  spinner.rs
static/: about.html  index.html  login.html
