# cargo-features = ["panic-immediate-abort"]

[package]
name = "otd"
version = "0.1.0"
edition = "2024"
description = "One-time download link server - Dioxus fullstack UI"
authors = ["Arpad Voros"]
license = "MIT"
publish = false

[dependencies]
# --------------------------------------------------
# common
# --------------------------------------------------
cfg-if = "^1.0"
const-str = "^0.7"
dioxus = { version = "^0.7", features = ["router", "fullstack"]  }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
tracing = "^0.1"
# --------------------------------------------------
# server
# --------------------------------------------------
axum = { version = "^0.8", optional = true }
itertools = { version = "^0.13", optional = true }
notify = { version = "^8.0", optional = true }
tokio = { version = "^1.48", optional = true }
toml = { version = "^1.0", optional = true }
tracing-appender = { version = "^0.2", optional = true }
tracing-subscriber = { version = "^0.3", features = ["env-filter"], optional = true }
uuid = { version = "^1.17", features = ["v4"], optional = true }
walkdir = { version = "^2.5", optional = true }
# --------------------------------------------------
# server - archive crates
# --------------------------------------------------
flate2 = { version = "^1.1", optional = true }
tar = { version = "^0.4", optional = true }
zip = { version = "^4.3", optional = true }
# --------------------------------------------------
# web
# --------------------------------------------------
gloo-timers = { version = "^0.3", features = ["futures"], optional = true }
web-sys = { version = "^0.3", optional = true }
# --------------------------------------------------
# parallel
# --------------------------------------------------
jwalk = { version = "^0.8", optional = true }
rayon = { version = "^1.10", optional = true }

[dev-dependencies]
tempfile = "^3.14"

[features]
default = []
doc-tests = []
web = ["dioxus/web", "dep:gloo-timers", "dep:web-sys"]
server = [
    "dioxus/server",
    "parallel",
    "dep:axum",
    "dep:flate2",
    "dep:itertools",
    "dep:notify",
    "dep:tar",
    "dep:tokio", "tokio/full",
    "dep:toml",
    "dep:tracing-appender",
    "dep:tracing-subscriber",
    "dep:uuid",
    "dep:walkdir",
    "dep:zip",
]
parallel = ["dep:rayon", "dep:jwalk"]

[unstable]
build-std = ["std", "panic_abort", "core", "alloc"]
build-std-features = ["panic_immediate_abort"]

[build]
rustflags = [
    "-Clto",
    "-Zvirtual-function-elimination",
    "-Zlocation-detail=none"
]

[profile.release]
# --------------------------------------------------
# https://dioxuslabs.com/learn/0.7/guides/tips/optimizing/
# --------------------------------------------------
opt-level = 'z'
debug = false
lto = true
codegen-units = 1
panic = "abort"
# panic = "immediate-abort"
incremental = false

[profile.wasm-release]
# --------------------------------------------------
# release profile for wasm build
# --------------------------------------------------
# note that the profile name `wasm-release` is hard-
# coded into Dioxus's cargo build command, so if
# it EVER changes, these settings will not be applied
# --------------------------------------------------
inherits = "release"
